objects/OpportunitySplitLog__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_New__c</fullName>
        <label>Note (New)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Old__c</fullName>
        <label>Note (Old)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Split Logs</relationshipLabel>
        <relationshipName>Opportunity_Split_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Split_ID__c</fullName>
        <label>Opportunity Split ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Split_Type__c</fullName>
        <label>Opportunity Split Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Type_New__c</fullName>
        <formula>Team_Member_New__r.Role_Type__c</formula>
        <label>Role Type (New)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Type_Old__c</fullName>
        <formula>Team_Member_Old__r.Role_Type__c</formula>
        <label>Role Type (Old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SplitPercent_New__c</fullName>
        <label>Split Percent (New)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SplitPercent_Old__c</fullName>
        <label>Split Percent (Old)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_Amount_New__c</fullName>
        <label>Split Amount (New)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Amount_Old__c</fullName>
        <label>Split Amount (Old)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Member_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member (New)</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunity Split Logs (New)</relationshipLabel>
        <relationshipName>New_Split_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member (Old)</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunity Split Logs (Old)</relationshipLabel>
        <relationshipName>Old_Split_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Split Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OpportunityId__c</columns>
        <columns>Opportunity_Split_ID__c</columns>
        <columns>Opportunity_Split_Type__c</columns>
        <columns>Team_Member_Old__c</columns>
        <columns>Team_Member_New__c</columns>
        <columns>SplitPercent_Old__c</columns>
        <columns>SplitPercent_New__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{YYYY}{MM}-{000}</displayFormat>
        <label>Opportunity Split Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Split Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>